# fincheck

./: LICENSE  README.md  setup.cfg
src/fincheck/: __init__.py  checksum.py  data.py  extract.py  utils.py  validate.py
src/fincheck/refdata/cusip/: cusip_list.csv  cusip_ticker_map.csv
src/fincheck/refdata/isin/: country_codes.csv
tests/: run_tests.py
tests/Data/: aba_numbers.txt  abas.txt  abas_answers.txt  cusips.txt  cusips_answers.txt  isins.txt  isins_answers.txt  sedols.txt  sedols_answers.txt
tests/Data/extraction/: extract1.txt  extract1_answers.txt  extract2.txt  extract2_answers.txt  extract3.txt  extract3_answers.txt  extract4.txt  extract4_answers.txt
