[metadata]
name = fincheck-trevorwmcguire
version = 0.0.1
author = Trevor McGuire
author_email = trevormcguire13@gmail.com
description = Utilities to work with financial accounts, security identifiers, and other numbers.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/trevormcguire/fincheck
project_urls =
    Bug Tracker = https://github.com/trevormcguire/fincheck/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6

[options.packages.find]
where = src